--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "coffee-script": "^1.0.0",
     "css-pipeline": "0.3.x",
     "dynamic-content": "^0.3.0",
+    "iconfonts": "^0.8.0",
     "jade": "^1.0.0",
     "js-pipeline": "0.2.x",
     "jstransformer-marked": "^1.0.0",
