--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "url": "https://github.com/thaddeusreid/www.git"
   },
   "scripts": {
-    "build": "node app.js"
+    "build": "node app.js",
+    "clean": "rm -rf dist",
+    "predeploy": "npm run clean && npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
